tests/NormalTests/paczka1/fuzzy1/49066339.err
Error in line 2: 3dzGFywUV S752 98,2
Error in line 4: 3dzGFywUV A592 46,6
Error in line 5: wKSjTv8r S752 57,3
Error in line 25: SJVDQP A592 6,6
Error in line 18: 3dzGFywUV A919 18,6
Error in line 34: A919 S770 849,2
Error in line 29: SJVDQP S752 27,9
